--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@casl/ability": "^6.7.3",
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "next": "15.2.1",
@@ -26,6 +25,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.5.3",
     "prisma": "^6.5.0",
     "typescript": "^5"
   }
