--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pg": "npx prisma generate",
+    "pm": "npx prisma migrate dev",
+    "pr": "npx prisma migrate reset --force",
+    "ps": "npx prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
@@ -28,6 +32,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.5.3",
     "prisma": "^6.5.0",
+    "sass": "^1.85.1",
     "typescript": "^5"
   }
 }
