--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -3,7 +3,7 @@ services:
     image: node:22
     container_name: next
     ports:
-      - '3000:3000'
+      - '3020:3000'
     volumes:
       - .:/app
     working_dir: /app
@@ -11,7 +11,7 @@ services:
     depends_on:
       - postgres
     environment:
-      - DATABASE_URL=postgresql://$DB_USER_LOGIN:$DB_USER_PWD@postgres:5432/mydb
+      - DATABASE_URL=postgresql://$DB_USER_LOGIN:$DB_USER_PWD@postgres:5432/$DB_NAME
     networks:
       - app_network
 
