--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prisma": "^6.5.0",
     "sass": "^1.85.1",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
 }
