--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^6.6.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "bcryptjs": "^3.0.2",
     "lodash": "^4.17.21",
     "next": "15.3.1",
