add old app files + config prisma for linux

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
-      "@prisma/*": ["../prisma/*"],
+      "@orm/*": ["../prisma/*"],
       "@generated/*": ["app/generated/prisma"]
     }
   },
