--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
+      "@components/*": ["components/*"],
       "@orm/*": ["../prisma/*"],
       "@generated/*": ["app/generated/prisma"]
     }
