--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -43,6 +47,7 @@
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.7",
     "typescript": "^5"
   }
 }
