--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-prettier": "^5.2.6",
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
+    "sass": "^1.87.0",
     "typescript": "^5"
   }
 }
