--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "pg": "npx prisma generate",
     "pm": "npx prisma migrate dev",
-    "pr": "npx prisma migrate reset"
+    "pr": "npx prisma migrate reset --force"
+  },
+  "prisma": {
+    "seed": "ts-node -r tsconfig-paths/register prisma/seed.ts"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -42,6 +45,8 @@
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "sass": "^1.87.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   }
 }
