--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "lodash": "^4.17.21",
     "next": "15.3.1",
