--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "pg": "npx prisma generate",
     "pm": "npx prisma migrate dev",
-    "pr": "npx prisma migrate reset"
+    "pr": "npx prisma migrate reset --force"
+  },
+  "prisma": {
+    "seed": "ts-node -r tsconfig-paths/register prisma/seed.ts"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -20,6 +23,8 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "lodash": "^4.17.21",
     "next": "15.3.1",
@@ -42,6 +47,8 @@
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "sass": "^1.87.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   }
 }
