--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@reduxjs/toolkit": "^2.8.0",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
@@ -32,6 +33,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-redux": "^9.2.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
